syntax = "proto3";

package proto;
option go_package = "./;proto";


message ItemHint {
  uint32 item_id = 7;
  uint32 count = 14;
  bool is_new = 2;
  uint64 guid = 15;
}
