syntax = "proto3";

package proto;
option go_package = "./;proto";

import "StoreType.proto";

message StoreItemDelNotify {
  enum CmdId {
    option allow_alias = true;
    NONE = 0;
    ENET_CHANNEL_ID = 0;
    ENET_IS_RELIABLE = 1;
    CMD_ID = 637;
  }

  StoreType store_type = 14;
  repeated uint64 guid_list = 10;
}
